[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logosfuzz"
version = "0.1.0"
description = "LLM 기반 자동차 오픈소스 특화 퍼저 - EXE 파트 (격리 퍼징 실행)"
requires-python = ">=3.10"
authors = [{ name = "sesezz" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
logosfuzz = "logosfuzz.cli:main"

[tool.setuptools]
packages = ["logosfuzz", "logosfuzz.execute"]
